# boolean_circuit_generator

./: .gitignore  CMakeLists.txt  README.md  compile.bash  project_manager.bash
include/: BristolCircuitGenerator.hpp  BristolCircuitTester.hpp  Circuit.hpp  CircuitGenerator.hpp  CircuitTester.hpp  LibscapiCircuitGenerator.hpp  LibscapiCircuitTester.hpp  SignedVariable.hpp  UnsignedVariable.hpp  Variable.hpp  Wire.hpp
src/: BristolCircuitGenerator.cpp  BristolCircuitTester.cpp  CircuitGenerator.cpp  CircuitTester.cpp  LibscapiCircuitGenerator.cpp  LibscapiCircuitTester.cpp  SignedVariable.cpp  UnsignedVariable.cpp  Variable.cpp
tests/: CMakeLists.txt  aes_ecb_decryption_function.cpp  aes_ecb_encryption_function.cpp  aes_ecb_function.cpp  average_function.cpp  generate_bristol_circuit.cpp  generate_libscapi_circuit.cpp  test_bristol_circuit.cpp  test_libscapi_circuit.cpp
